<resources>
    <string name="app_name">Weather4SureApp</string>

    <string name="blank">\"\"</string>
    <string name="error_general_data_retrieve">An error occurred while fetching data. Please try again</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="visibility">visibility</string>
    <string name="action_settings">Settings</string>
    <string name="temperature_unit_key">temperature unit</string>
    <string name="Favorites">Favorites</string>
    <string name="open_navigation_drawer">open navigation drawer</string>
    <string name="close_navigation_drawer">close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Weather4Sure</string>
    <string name="nav_header_subtitle">weather4sure@4surethechnology.com</string>
    <string name="map">Map</string>
</resources>